[package]
name = "iobytes"
version = "0.0.0"
edition = "2021"
authors = ["Rain Liu <yliu@webrtc.rs>"]
description = "Zero-copy IO Bytes in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/iobytes"
homepage = "https://webrtc.rs"
repository = "https://github.com/ngr-tc/iobytes"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
